--- a/_config.yml
+++ b/_config.yml
@@ -21,12 +21,9 @@ description: "SRM University Student run technology blog"
 keywords: "SRM, nextech, next tech lab, blog, technology"
 
 # Site settings
-url: http://nextech.io
-baseurl: "/blog"
-=======
-url: ""
-baseurl: ""
-# baseurl: ""
+url: "http://nextechlab.github.io"
+baseurl: "/syntechx"
+
 
 # Author settings
 author:
