--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ description: "SRM University Student run technology blog"
 keywords: "SRM, nextech, next tech lab, blog, technology"
 
 # Site settings
-url: "http://nextechlab.github.io"
+url: "http://blog.nextech.io"
 baseurl: "/syntechx"
 
 
